[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["json_model"]

[project]
name = "json_model"
authors = [ { name = "Fabien Coelho" }, { name = "Claire Yannou-Medrala" } ]
description = "JSON Model Tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0 1.0" }
classifiers = [ "Topic :: Software Development" ]
version = "1.0"
dependencies = [ "requests", "google-re2" ]

[project.optional-dependencies]
dev = [ "jschon", "pytest", "pyyaml" ]

[project.scripts]
jm-c-check-model = "json_model:c_check_model"
jm-cs-check-model = "json_model:static_compiler_check"
jm-v-check-model = "json_model:v_check_model"
jm-model2schema = "json_model:model2schema_script"
jm-schema2model = "json_model:schema2model_script"
jm-preprocessor = "json_model:preprocessor"
jm-compiler = "json_model:static_compiler"

[project.urls]
repository = "https://github.com/clairey-zx81/json-model"
