[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["json_model"]

[project]
name = "json_model"
authors = [ { name = "Fabien Coelho" }, { name = "Claire Yannou-Medrala" } ]
description = "JSON Model Tools"
readme = "README.md"
requires-python = ">=3.12"  # for "type"
license = "CC0-1.0"
classifiers = [ "Topic :: Software Development" ]
version = "2.0-alpha"
dependencies = [ "requests", "google-re2" ]

[project.optional-dependencies]
# dev = [ "pytest", "pyyaml", "flake8", "ruff", "pyright" ]
dev = [ "flake8", "ruff", "pyright" ]

[project.scripts]
jmc = "json_model:jmc_script"

[project.urls]
repository = "https://github.com/clairey-zx81/json-model"
