[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
include-package-data = true

[tools.setuptools.package-data]
json_model = ["runtime/*", "data/*"]

[tool.setuptools.packages.find]
include = ["json_model", "json_model.runtime", "json_model.data"]
exclude = ["tests/*", "models/*"]

[project]
name = "json_model_compiler"
authors = [ { name = "Fabien Coelho" }, { name = "Claire Yannou-Medrala" } ]
description = "JSON Model Tools"
readme = "README.md"
requires-python = ">=3.12"  # for "type"
license = "CC0-1.0"
classifiers = [ "Topic :: Software Development" ]
version = "2.0b36"
dependencies = [
  "requests", "google-re2", "pyyaml", "validators",
  # "JsonSchemaUtils@git+https://github.com/zx80/json-schema-utils"
  "json-schema-utils>=0.8.5"
]

[project.optional-dependencies]
dev = [
  "flake8", "ruff", "pyright", "pytest", "pytest-xdist[psutils]", "filelock", "ipython"
]
dist = [ "build", "wheel", "twine" ]

[project.scripts]
jmc = "json_model:jmc_script"

[project.urls]
homepage = "https://json-model.org/"
documentation = "https://json-model.org/"
repository = "https://github.com/clairey-zx81/json-model.git"
issues = "https://github.com/clairey-zx81/json-model/issues"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
exclude = [ "*/data/*", "*/WIP/*" ]
ignore = ["E701", "E702", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
exclude = [ "json_model/data/", "json_model/WIP/" ]

[tool.mypy]
exclude = [ "json_model/data/", "json_model/WIP/" ]
